--- a/Colt_steele/Section 7 CSS Selectors/05_CSS_Selectors/more_styles.css
+++ b/Colt_steele/Section 7 CSS Selectors/05_CSS_Selectors/more_styles.css
@@ -45,3 +45,13 @@ h2 + button{
 footer > a{
     color: blue;
 }
+input{
+    color: red;
+}
+
+input[type="password"]{
+    color: black;
+}
+section[class="post"]{
+    background-color: navajowhite;
+}
