--- a/Colt_steele/Section 8 CSS Box Model/Box_Model_And_Units/Box_Model/test/sk_style.css
+++ b/Colt_steele/Section 8 CSS Box Model/Box_Model_And_Units/Box_Model/test/sk_style.css
@@ -6,6 +6,8 @@ div{
 h1{
     background-color: green;
     width: 100px;
+    padding-left: 100px;
+    padding-top: 50px;
      }
 #one{
     background-color: #e5989b;
@@ -20,6 +22,7 @@ h1{
     border-width: 5px;
     border-style: dotted;
     border-left-color: green;
+    padding-right: 50px;
 }
 #three{
     background-color: #6d6875;
