--- a/Colt_steele/Section 10 Responsive CSS & Flexbox/Flexbox_And_Responsive/Flexbox Starter/app.css
+++ b/Colt_steele/Section 10 Responsive CSS & Flexbox/Flexbox_And_Responsive/Flexbox Starter/app.css
@@ -10,5 +10,14 @@ h1 {
     height: 500px;
     margin: 0 auto;
     border: 5px solid #003049;
+    display: flex;
+    flex-direction: row;
+    /* justify-content: center; */
+    justify-content: space-evenly;
 }
 
+#container div{
+    width: 200px;
+    height: 200px;
+
+}
